# example-poetry-cli

./: README.md  pyproject.toml
test_cli/: __init__.py
